--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <div class="container">
       <div class="banner-gif">
         <img id="banner" src="./public/images/mid.gif" alt="banner" />
+        <p id="click_me">^^^ (Click me) ^^^</p>
       </div>
-      <h1 id="tittle">Will you be my valentine?</h1>
+      <h1 id="title">Will you be my valentine?</h1>
       <div class="buttons">
         <button id="yes-button"><p>Yes</p></button>
         <button id="no-button"><p>No</p></button>
       </div>
       <div class="message">
         <!-- <h2>Yepppie, see you sooonnn :3</h2> -->
-        <img id="yes_gif" src="./public/images/yes_clean.gif" alt="">
+        <!-- <img id="yes_cat" src="./public/images/yes_clean.gif" alt=""> -->
         <!-- <h6>Creator: @aayushh.hhhh</h6> -->
       </div>
     </div>
