--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<div class="container">
 	<div class="banner-gif">
 		<img id="banner" src="./public/images/blushing_cat.gif" alt="banner" />
-		<p id="click_me">^^^ (Click me) ^^^</p>
+		<p id="click_me">^^^ (click me) ^^^</p>
 	</div>
-	<h1 id="title">Will you be my valentine?</h1>
+	<h1 id="title">will you be my valentine?</h1>
 	<div class="buttons">
 		<!-- <button id="yes-button"><p>Yes</p></button> -->
-		<button id="yes-button" class="button-30" role="button">Yes</button>
+		<button id="yes-button" class="button-30" role="button">yes</button>
 		<!-- <button id="no-button"><p>No</p></button> -->
-		<button id="no-button" class="button-30" role="button">No</button>
+		<button id="no-button" class="button-30" role="button">no</button>
 
 	</div>
 	<div class="message">
