--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 </head>
 <body>
 	<div class="container">
-	<div class="banner-gif">
-		<img id="banner" src="./public/images/blushing_cat.gif" alt="banner" />
-		<p id="click_me">^^^ (click me) ^^^</p>
-	</div>
-	<h1 id="title">will you be my valentine?</h1>
-	<div class="buttons">
-		<!-- <button id="yes-button"><p>Yes</p></button> -->
-		<button id="yes-button" class="button-30" role="button">yes</button>
-		<!-- <button id="no-button"><p>No</p></button> -->
-		<button id="no-button" class="button-30" role="button">no</button>
-
-	</div>
-	<div class="message">
-		
-	</div>
+		<div class="banner-gif">
+			<img id="banner" src="./public/images/blushing_cat.gif" alt="banner" />
+			<p id="click_me">^^^ (click me) ^^^</p>
+		</div>
+		<h1 id="title">will you be my valentine?</h1>
+		<div class="buttons">
+			<!-- <button id="yes-button"><p>Yes</p></button> -->
+			<button id="yes-button" class="button-30" role="button">yes</button>
+			<!-- <button id="no-button"><p>No</p></button> -->
+			<button id="no-button" class="button-30" role="button">no</button>
+		</div>
+		<div class="message">
+			<!-- Spotify Playlist -->
+			<button id="show_playlist" class="button-30"><3</button>
+			<iframe id="playlist" style="border-radius:12px;" src="https://open.spotify.com/embed/playlist/7ilMzR8d62JG68wqS2xmGG?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		</div>
 	</div>
 	<script src="./public/js/script.js"></script>
 </body>
